# rustos

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: build-code.yml
src/: interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga.rs  vga_buffer.rs
src/pic8259/: mod.rs
src/x86_64/: README.md  addr.rs  mod.rs
src/x86_64/instructions/: interrupts.rs  mod.rs  port.rs  segmentation.rs  tables.rs
src/x86_64/registers/: mod.rs  rflags.rs
src/x86_64/structures/: gdt.rs  idt.rs  mod.rs  port.rs
tests/: basic_boot.rs  panic_handler.rs  should_panic.rs  stack_overflow.rs
