[package]
name = "rustos"
version = "0.1.0"
authors = ["gky360 <gky360@gmail.com>"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[dependencies]
bitflags = "1.2.1"
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.0"

[dependencies.bootloader]
version = "0.8.0"
features = ["vga_320x200"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1